--- a/source-css/falloutequestria.css
+++ b/source-css/falloutequestria.css
@@ -448,12 +448,14 @@ no-repeat fixed center bottom
 		height: 140px;
 		background-repeat: no-repeat;
 		background-image: url(%%foe-bpm3x3-pg2-v01%%);}
-		a[href|="/lpeep"], a[href|="/bjbook"]{
+		a[href|="/lpeep"], a[href|="/bjbook"], a[href|="/bjattracted"], a[href|="/bjdown"], 
+		a[href|="/bjpointy"], a[href|="/bjsick"], a[href|="/lpscruffy"], a[href|="/lpcute"], a[href|="/scotchtape"], 
+		a[href|="/bjhmm"], a[href|="/bjspoilers"], a[href|="/lpbarndoor"]{
 		display: block;
 		width: 140px;
 		height: 140px;
 		background-repeat: no-repeat;
-		background-image: url(%%foe-bpm3x3-pg3-v02%%);}
+		background-image: url(%%foe-bpm3x3-pg3-v03%%);}
 		a[href|="/bjseriously"]{ background-position: 0px 0px;}
 		a[href|="/calamitytale"]{ background-position: 0px -145px;}
 		a[href|="/grumpypip"]{ background-position: 0px -290px;}
@@ -494,6 +496,16 @@ no-repeat fixed center bottom
 		a[href|="/twiseal"]{ background-position: -145px -145px;}
 		a[href|="/lpeep"]{ background-position: 0px 0px;}
 		a[href|="/bjbook"]{ background-position: 0px -145px}
+		a[href|="/bjattracted"]{ background-position: 0px -290px}
+		a[href|="/bjdown"]{ background-position: 0px -435px}
+		a[href|="/bjpointy"]{ background-position: 0px -580px}
+		a[href|="/bjsick"]{ background-position: 0px -725px}
+		a[href|="/lpscruffy"]{ background-position: 0px -870px}
+		a[href|="/lpcute"]{ background-position: 0px -1015px}
+		a[href|="/scotchtape"]{ background-position: 0px -1160px}
+		a[href|="/bjhmm"]{ background-position: 0px -1305px}
+		a[href|="/bjspoilers"]{ background-position: 0px -1450px}
+		a[href|="/lpbarndoor"]{ background-position: 0px -1595px}
 
 
 
