--- a/source-css/lyra.css
+++ b/source-css/lyra.css
@@ -345,3 +345,91 @@ pdf_icon {background-position:-64px -384px;}
 .thumbnail.default {
     background-position: 0px -73px !important
     }
+
+
+
+
+/* * * * * * * *  * * * * * * * *
+ * lyraquisition removed emotes *
+ * * * * * * * *  * * * * * * * */
+
+/* lyraquisition still has 4 lyra emotes. That's why some of the emotes have been commented out.
+ 
+/* lyraquisition-1 */
+a[href|="/lyraimbalanced"], a[href|="/lyramummy"], /* a[href|="/lyraawkward"], */ a[href|="/hellohuman"], /* a[href|="/lyrajumpforjoy"], */ a[href|="/lyrastand"], a[href|="/lyradevious"], a[href|="/lyralook"], a[href|="/meetthehydro"],
+a[href|="/lyrawha"], a[href|="/lyrasitting"], a[href|="/lyraheey"], a[href|="/lyrawaitaminute"], a[href|="/lyraaneurysm"]
+{
+    background-image: url(%%lyraquisition-1%%);
+    display:block;
+    float:left;
+    clear:none;
+}
+ 
+/* lyraquisition-2 */
+a[href|="/lyrabar"], /* a[href|="/lyrawhoa"], */a[href|="/lyralikeabaws"], a[href|="/adorablelyra"], a[href|="/lyrabonhug"], a[href|="/lyralovesbon"], a[href|="/ajourneybegins"], a[href|="/lyracloak"], a[href|="/lyrabridesmaidrun"], a[href|="/lyrafilly"], a[href|="/spyra"], a[href|="/lyrasegway"], a[href|="/lyrathearcher"], a[href|="/lyrastandingup"]
+{
+    background-image: url(%%lyraquisition-2%%);
+    display:block;
+    float:left;
+    clear:none
+}
+ 
+/* lyraquisition-3 */
+a[href|="/lyrafilly2"], a[href|="/lyranotimpressed"], a[href|="/lyrarave"], a[href|="/lyrajazz"], /* a[href|="/lyrarun"], */ a[href|="/lyrapower"], a[href|="/lyraponytail"], a[href|="/lyramarine"], a[href|="/lyrafilly3"], a[href|="/swellhoodie"], a[href|="/ijustfixedthese"], a[href|="/lyraheeey"], a[href|="/lyrahi"], a[href|="/lyrabridesmaid"]
+{
+    background-image: url(%%lyraquisition-3%%);
+    display:block;
+    float:left;
+    clear:none
+}
+ 
+/* lyraquisition-1 */
+ 
+a[href|="/lyraimbalanced"] {width: 135px; height: 150px; background-position: 0 0}
+a[href|="/lyramummy"] {width: 134px; height: 150px; background-position: -135px 0}
+/* a[href|="/lyraawkward"] {width: 82px; height: 150px; background-position: -269px 0} */
+a[href|="/hellohuman"] {width: 174px; height: 150px; background-position: -351px 0}
+/* a[href|="/lyrajumpforjoy"] {width: 106px; height: 150px; background-position: -525px 0} */
+a[href|="/lyrastand"] {width: 102px; height: 150px; background-position: 0 -150px}
+a[href|="/lyradevious"] {width: 148px; height: 150px; background-position: -102px -150px}
+a[href|="/lyralook"] {width: 122px; height: 150px; background-position: -250px -150px}
+a[href|="/meetthehydro"] {width: 125px; height: 150px; background-position: -372px -150px}
+a[href|="/lyrawha"] {width: 136px; height: 150px; background-position: -497px -150px}
+a[href|="/lyrasitting"] {width: 110px; height: 150px; background-position: 0 -300px}
+a[href|="/lyraheey"] {width: 108px; height: 150px; background-position: -110px -300px}
+a[href|="/lyrawaitaminute"] {width: 152px; height: 150px; background-position: -218px -300px}
+a[href|="/lyraaneurysm"] {width: 123px; height: 150px; background-position: -370px -300px}
+ 
+/* lyraquisition-2 */
+ 
+a[href|="/lyrabar"] {width: 75px; height: 150px; background-position: 0 0}
+/* a[href|="/lyrawhoa"] {width: 172px; height: 150px; background-position: -75px 0} */
+a[href|="/lyralikeabaws"] {width: 97px; height: 150px; background-position: -247px 0}
+a[href|="/adorablelyra"] {width: 105px; height: 150px; background-position: -344px 0}
+a[href|="/lyrabonhug"] {width: 155px; height: 150px; background-position: -449px 0}
+a[href|="/lyralovesbon"] {width: 129px; height: 150px; background-position: 0 -150px}
+a[href|="/ajourneybegins"] {width: 127px; height: 150px; background-position: -129px -150px}
+a[href|="/lyracloak"] {width: 121px; height: 150px; background-position: -256px -150px}
+a[href|="/lyrabridesmaidrun"] {width: 243px; height: 150px; background-position: -377px -150px}
+a[href|="/lyrafilly"] {width: 138px; height: 150px; background-position: -620px -150px}
+a[href|="/spyra"] {width: 171px; height: 150px; background-position: 0 -300px}
+a[href|="/lyrasegway"] {width: 98px; height: 150px; background-position: -171px -300px}
+a[href|="/lyrathearcher"] {width: 135px; height: 200px; background-position: -269px -300px}
+a[href|="/lyrastandingup"] {width: 171px; height: 150px; background-position: -404px -300px}
+ 
+/* lyraquisition-3 */
+ 
+a[href|="/lyrafilly2"] {width: 123px; height: 150px; background-position: 0 0}
+a[href|="/lyranotimpressed"] {width: 114px; height: 150px; background-position: -123px 0}
+a[href|="/lyrarave"] {width: 136px; height: 150px; background-position: -237px 0}
+a[href|="/lyrajazz"] {width: 104px; height: 150px; background-position: -373px 0}
+/* a[href|="/lyrarun"] {width: 266px; height: 150px; background-position: -477px 0} */
+a[href|="/lyrapower"] {width: 132px; height: 150px; background-position: 0 -150px}
+a[href|="/lyraponytail"] {width: 174px; height: 157px; background-position: -132px -150px}
+a[href|="/lyramarine"] {width: 149px; height: 150px; background-position: -306px -150px}
+a[href|="/lyrafilly3"] {width: 148px; height: 150px; background-position: -455px -150px}
+a[href|="/swellhoodie"] {width: 86px; height: 150px; background-position: -603px -150px}
+a[href|="/ijustfixedthese"] {width: 170px; height: 150px; background-position: 0 -307px}
+a[href|="/lyraheeey"] {width: 135px; height: 150px; background-position: -170px -307px}
+a[href|="/lyrahi"] {width: 125px; height: 150px; background-position: -305px -307px}
+a[href|="/lyrabridesmaid"] {width: 167px; height: 150px; background-position: -430px -307px}
