--- a/source-css/mylittlepony.css
+++ b/source-css/mylittlepony.css
@@ -151,8 +151,8 @@ transition: all 3s linear;
 
 /* CSS last generated on Sat, 16 Feb 2013 02:05:57 -0600 by UNKNOWN on derpy */
 div.titlebox span.word {display:none}
-div.titlebox .subscribers span.number:after {content:" Ponies Dreaming"}
-div.titlebox .users-online span.number:after {content:" Having Nightmares"}
+div.titlebox .subscribers span.number:after {content:" Sobbing Uncontrollably"}
+div.titlebox .users-online span.number:after {content:" Crying on the Inside"}
 
 .sidecontentbox .flair {display:none}
 .sidebox .spacer {display:none}
