--- a/source-css/berrytrain.css
+++ b/source-css/berrytrain.css
@@ -1,4 +1,3 @@
-
 /*testest*/
 
 .side .titlebox h6 {position:fixed;z-index:1000;bottom:-270px;right:350px;display:block;width:240px;height:286px;padding:0;background:transparent url(%%dolphin%%) no-repeat top left;font-size:0;text-indent:-9999px;overflow:hidden; transition: bottom 1s;}
@@ -214,7 +213,8 @@ a[href|="/best"] {
 .arrow.downmod { background: url(%%ta%%) 0 0; }
 
 /* THINGS */
-a[href="YATTAA"] {
+
+a[href="/YATTAA"] {
 background-position: 0px 0px;
 Display: block;
 Clear: none;
@@ -224,7 +224,7 @@ Height: 442px;
 background-image: url(%%YATTAA%%) !important
 }
 
-a[href="best"] {
+a[href="/best"] {
 background-position: 0px 0px;
 Display: block;
 Clear: none;
@@ -234,17 +234,17 @@ Height: 88px;
 background-image: url(%%best%%) !important
 }
 
-a[href="gaaay"] {
+a[href="/gaaay"] {
 background-position: 0px 0px;
 Display: block;
 Clear: none;
 Float: left;
-Width: 324px;
-Height: 199px;
+Width: 143px;
+Height: 87px;
 background-image: url(%%gaaay%%) !important
 }
 
-a[href|="killerrabbit"] {
+a[href|="/killerrabbit"] {
     display: block;
     clear: none;
     float: left;
