--- a/source-css/ponymotes.css
+++ b/source-css/ponymotes.css
@@ -558,7 +558,7 @@ a[href|="/cadscience"], a[href|="/appul"], a[href|="/sadprincesshorse"], a[href|
 {background-image:url(%%misfitsk%%);display:block;float:left;}
 
 /* Misfits l */
-a[href|="/eqggaladash"], a[href|="/shininglick"], a[href|="/sblick"], a[href|="/sombraheart"], a[href|="/teamtaco"], a[href|="/ablick"], a[href|="/cmcship"], a[href|="/swappleaww"], a[href|="/flutterbutter"], a[href|="/twilightthebearded"], a[href|="/creepershy"], a[href|="/engineeraj"], a[href|="/youflunk"], a[href|="/bloombatsquee"], a[href|="/bloombow"], a[href|="/sockies"], a[href|="/enormoussnake"], a[href|="/eponawearsitbetter"], a[href|="/applebat"], a[href|="/fuzzybutts"]
+a[href|="/eqggaladash"], a[href|="/shininglick"], a[href|="/sblick"], a[href|="/sombraheart"], a[href|="/teamtaco"], a[href|="/ablick"], a[href|="/cmcship"], a[href|="/swappleaww"], a[href|="/flutterbutter"], a[href|="/twilightthebearded"], a[href|="/creepershy"], a[href|="/engineeraj"], a[href|="/youflunk"], a[href|="/bloombatsquee"], a[href|="/bloombow"], a[href|="/sockies"], a[href|="/enormoussnake"], a[href|="/eponawearsitbetter"], a[href|="/applebat"], a[href|="/fuzzybutts"], a[href|="/socksaydash"]
 {background-image:url(%%misfitsl%%);display:block;float:left;}
 
 /*
@@ -1258,3 +1258,4 @@ a[href|="/enormoussnake"] {width:125px;height:112px;background-position: -194px 
 a[href|="/eponawearsitbetter"] {width:165px;height:200px;background-position: -519px -405px;}
 a[href|="/applebat"] {width:150px;height:130px;background-position: 0 -452px;}
 a[href|="/fuzzybutts"] {width:150px;height:97px;background-position: -150px -504px;}
+a[href|="/socksaydash"] {width:200px;height:97px;background-position: -300px -513px;}
