--- a/source-css/taviquisition.css
+++ b/source-css/taviquisition.css
@@ -546,15 +546,6 @@ a[href|="/crazytavi"] {
  background-image: url(%%crazytavi%%);
 } 
 
-a[href|="/vinylimgoingtokillyou"] {  
- display: block;
- clear: none;
- float: left; 
- width: 161px;
- height: 150px;
- background-image: url(%%vinylimgoingtokillyou%%);
-} 
-
 a[href|="/wynaut"] {  
  display: block;
  clear: none;
@@ -2223,3 +2214,393 @@ a[href|="/tavidoom"] {
  background-image: url(%%Octavia-von-Doom-emote%%);
 } 
  
+
+a[href|="/piggyty"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 70px;
+ height: 70px;
+ background-image: url(%%piggies%%);
+ background-position: -0px -0px;  
+} 
+
+a[href|="/piggyjack"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 70px;
+ height: 70px;
+ background-image: url(%%piggies%%);
+ background-position: -70px -0px;  
+} 
+
+a[href|="/piggysparkle"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 70px;
+ height: 70px;
+ background-image: url(%%piggies%%);
+ background-position: -140px -0px;  
+} 
+
+a[href|="/piggypie"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 70px;
+ height: 70px;
+ background-image: url(%%piggies%%);
+ background-position: -0px -70px;  
+} 
+
+a[href|="/piggydash"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 70px;
+ height: 70px;
+ background-image: url(%%piggies%%);
+ background-position: -70px -70px;  
+} 
+
+a[href|="/piggyshy"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 70px;
+ height: 70px;
+ background-image: url(%%piggies%%);
+ background-position: -140px -70px;  
+} 
+
+a[href|="/piggyloo"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 70px;
+ height: 70px;
+ background-image: url(%%piggies%%);
+ background-position: -0px -140px;  
+} 
+
+a[href|="/piggybloom"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 70px;
+ height: 70px;
+ background-image: url(%%piggies%%);
+ background-position: -70px -140px;  
+} 
+
+a[href|="/piggybelle"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 70px;
+ height: 70px;
+ background-image: url(%%piggies%%);
+ background-position: -140px -140px;  
+} 
+
+a[href|="/piggylyra"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 70px;
+ height: 70px;
+ background-image: url(%%piggies%%);
+ background-position: -0px -210px;  
+} 
+
+a[href|="/piggybon"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 70px;
+ height: 70px;
+ background-image: url(%%piggies%%);
+ background-position: -70px -210px;  
+} 
+
+a[href|="/piggylee"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 70px;
+ height: 70px;
+ background-image: url(%%piggies%%);
+ background-position: -140px -210px;  
+} 
+
+a[href|="/piggyscratch"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 70px;
+ height: 70px;
+ background-image: url(%%piggies%%);
+ background-position: -0px -280px;  
+} 
+
+a[href|="/piggytavi"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 70px;
+ height: 70px;
+ background-image: url(%%piggies%%);
+ background-position: -70px -280px;  
+} 
+
+a[href|="/piggyfire"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 70px;
+ height: 70px;
+ background-image: url(%%piggies%%);
+ background-position: -140px -280px;  
+} 
+
+a[href|="/piggyluck"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 70px;
+ height: 70px;
+ background-image: url(%%piggies%%);
+ background-position: -0px -350px;  
+} 
+
+a[href|="/piggydo"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 70px;
+ height: 70px;
+ background-image: url(%%piggies%%);
+ background-position: -70px -350px;  
+} 
+
+a[href|="/piggyderpy"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 70px;
+ height: 70px;
+ background-image: url(%%piggies%%);
+ background-position: -140px -350px;  
+} 
+
+a[href|="/piggytia"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 70px;
+ height: 70px;
+ background-image: url(%%piggies%%);
+ background-position: -0px -420px;  
+} 
+
+a[href|="/piggyluna"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 70px;
+ height: 70px;
+ background-image: url(%%piggies%%);
+ background-position: -70px -420px;  
+} 
+
+a[href|="/piggycadance"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 70px;
+ height: 70px;
+ background-image: url(%%piggies%%);
+ background-position: -140px -420px;  
+} 
+
+a[href|="/piggyheart"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 70px;
+ height: 70px;
+ background-image: url(%%piggies%%);
+ background-position: -0px -490px;  
+} 
+
+a[href|="/piggyzecora"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 70px;
+ height: 70px;
+ background-image: url(%%piggies%%);
+ background-position: -70px -490px;  
+} 
+
+a[href|="/piggygate"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 70px;
+ height: 70px;
+ background-image: url(%%piggies%%);
+ background-position: -140px -490px;  
+} 
+
+a[href|="/piggychaser"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 70px;
+ height: 70px;
+ background-image: url(%%piggies%%);
+ background-position: -0px -630px;  
+} 
+
+a[href|="/piggyflitter"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 70px;
+ height: 70px;
+ background-image: url(%%piggies%%);
+ background-position: -70px -630px;  
+} 
+
+a[href|="/piggymaud"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 70px;
+ height: 70px;
+ background-image: url(%%piggies%%);
+ background-position: -140px -630px;  
+} 
+
+a[href|="/piggyshimmer"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 70px;
+ height: 70px;
+ background-image: url(%%piggies%%);
+ background-position: -0px -560px;  
+} 
+
+a[href|="/piggybug"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 70px;
+ height: 70px;
+ background-image: url(%%piggies%%);
+ background-position: -70px -560px;  
+} 
+
+a[href|="/piggytrixie"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 70px;
+ height: 70px;
+ background-image: url(%%piggies%%);
+ background-position: -140px -560px;  
+} 
+
+a[href|="/piggydoctor"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 70px;
+ height: 70px;
+ background-image: url(%%piggies%%);
+ background-position: -0px -700px;  
+}  
+
+a[href|="/piggylane"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 70px;
+ height: 70px;
+ background-image: url(%%piggies%%);
+ background-position: -70px -700px;  
+} 
+
+a[href|="/piggysoarin"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 70px;
+ height: 70px;
+ background-image: url(%%piggies%%);
+ background-position: -140px -700px;  
+} 
+
+a[href|="/piggymac"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 70px;
+ height: 70px;
+ background-image: url(%%piggies%%);
+ background-position: -0px -770px;  
+} 
+
+a[href|="/piggyburn"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 70px;
+ height: 70px;
+ background-image: url(%%piggies%%);
+ background-position: -70px -770px;  
+} 
+
+a[href|="/piggykarma"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 70px;
+ height: 70px;
+ background-image: url(%%piggies%%);
+ background-position: -140px -770px;  
+} 
+
+a[href|="/piggytwist"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 70px;
+ height: 70px;
+ background-image: url(%%piggies%%);
+ background-position: -0px -840px;  
+} 
+
+a[href|="/piggymoon"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 70px;
+ height: 70px;
+ background-image: url(%%piggies%%);
+ background-position: -70px -840px;  
+} 
+
+a[href|="/piggybee"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 70px;
+ height: 70px;
+ background-image: url(%%piggies%%);
+ background-position: -140px -840px;  
+} 
